--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-
+    <base href="/">
     <!-- endbuild -->
   </head>
   <body ng-app="pilvivaylaTerminatorsApp">
