--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
     <nav class="top-bar" data-topbar>
-      <ul class="title-area">
+      <ul class="title-area large-2 medium-3 columns">
         <li class="name">
           <h1><a href="#">Pilviväylä</a></h1>
         </li>
@@ -34,12 +34,19 @@
 
       <section class="top-bar-section">
         <!-- Right Nav Section -->
+        <ul class="left">
+          <li>
+            <form>
+              <input class="search" type="text" placeholder="Search...">
+            </form>
+          </li>
+        </ul>
         <ul class="right">
-          <li class="active"><a href="#">Right Button Active</a></li>
           <li class="has-dropdown">
-            <a href="#">Right Button Dropdown</a>
+            <a>Ella the Teacher</a>
             <ul class="dropdown">
-              <li><a href="#">First link in dropdown</a></li>
+              <li><a href="#">Settings</a></li>
+              <li><a href="#">Log out</a></li>
             </ul>
           </li>
         </ul>
