Hexagons, tabs added to the prototype

--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@
       <!--<div class="medium-12 columns">-->
         <!-- Add your site or application content here -->
         <div>
-          <span class="search"><i class="icon-support"></i></span>
+         <!-- <span class="search"><i class="icon-support"></i></span>-->
           <div ui-view></div>
         </div>
 
