--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -18,7 +19,10 @@
     <link rel="stylesheet" href="styles/main.css">
     <base href="/">
     <!-- endbuild -->
+    <link rel="stylesheet" href="/scripts/vendor/owl-carousel/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/scripts/vendor/owl-carousel/owl-carousel/owl.theme.css">
     <link rel="stylesheet" href="/styles/iconfont/style.css">
+
   </head>
   <body ng-app="pilvivaylaTerminatorsApp" ng-class="{navCollapsed: !hover}">
     <!--[if lt IE 7]>
@@ -145,6 +149,10 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/subject.js"></script>
         <script src="scripts/vendor/mm-foundation-tpls-0.1.0.js"></script>
+        
+        <script src="scripts/vendor/owl-carousel/owl-carousel/owl.carousel.js"></script>
         <!-- endbuild -->
+
+       
 </body>
 </html>
