Subject page facelifting

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,14 @@
         <li><a href="#"><i class="icon-user"></i>Account</a></li>
       </ul>
     </nav>
-    <div class="page"><!-- 
+    <div class="page">
+      <nav class="topnav">
+        <ul>
+          <li><a href="#">Your bookmarks</a></li>
+          <li><a href="#">Account</a></li>
+        </ul>
+      </nav>
+    <!-- 
       <nav class="top-bar" data-topbar>
         <ul class="title-area large-2 medium-3 columns">
           <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
