Frontpage facelift & navigation restructuring

--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,16 @@
     </nav>
     <div class="page">
       <nav class="topnav">
-        <ul>
-          <li><a href="#">Your bookmarks</a></li>
+        <ul class="left">
+          <li><a href="#">Language:</a></li>
+          <li><a href="#">fi</a></li>
+          <li><a href="#">swe</a></li>
+          <li><a href="#" class="active" style="text-decoration: underline">en</a></li>
+        </ul>
+        <ul class="right">
+          <li><a href="#">Wishlist</a></li>
+          <li><a href="#">Your library</a></li>
+          <li><a href="#">Your subjects</a></li>
           <li><a href="#">Account</a></li>
         </ul>
       </nav>
